# vedro-hooks

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
tests/: test_vedro_hooks.py
tests/contexts/: __init__.py  hooks.py  registered_plugin.py
tests/helpers/: __init__.py  assert_called_once_with.py
tests/scenarios/: ignore_errors_during_hooks.py  show_registered_hooks.py  trigger_hooks_by_events.py
vedro_hooks/: __init__.py  vedro_hooks.py
