[tool.poetry]
name = "vedro-hooks"
version = "0.3.0"
description = "Enables custom hooks for Vedro, allowing actions on events like startup, scenario execution, and cleanup"
authors = [
    "Mickey Streicher <mickeystreicher@fastmail.us>"
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mickeystreicher/vedro-hooks"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.9"
vedro = ">=1.9,<2.0"

[tool.poetry.group.test.dependencies]
vedro-fn = "^0.1.0"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
